<resources>
    <string name="account">Already have a account go to Log in.</string>
    <string name="add_post">Create Post</string>
    <string name="app_logo">App logo</string>
    <string name="app_name">Shapes</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="enter_your_post_here">Enter text here</string>
    <string name="filter">Filter</string>
    <string name="image">Image</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="log_in">Log in</string>
    <string name="logout">Log out</string>
    <string name="Logout_message">Are you sure you want to logout?</string>
    <string name="name">Name</string>
    <string name="new_account">Don\'t have account go to Sign in.</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="post">Post</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="profile_image">profile image</string>
	<string name="profile_bg_image">profile_bg_image</string>
	<string name="date_created">date created</string>
	<string name="likes">" Likes"</string>
    <string name="share">" Share"</string>
	<string name="some_description">Some description...</string>
    <string name="content">Content</string>

</resources>