<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <!-- Top Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_logo_app"
            android:background="@color/white"
            android:contentDescription="@string/app_logo" />

    </LinearLayout>

    <!-- Center Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/Name"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/name"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="" />

    </LinearLayout>

    <!-- Bottom Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/account"
            android:clickable="true"
            android:onClick="navigateToLogin"
            android:focusable="true" />

    </LinearLayout>


</LinearLayout>
