<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Top Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/app_logo"
            android:src="@mipmap/ic_logo_app" />

    </LinearLayout>

    <!-- Center Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:id="@+id/Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <!-- Bottom Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="navigateToRegister"
            android:text="@string/new_account" />

    </LinearLayout>

</LinearLayout>
