<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	app:cardCornerRadius="16dp"
	android:layout_margin="4dp"
	app:cardElevation="4dp"
	app:cardUseCompatPadding="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:textSize="18sp"
			android:textStyle="bold"
			android:gravity="start"
			android:layout_weight="1"
			android:id="@+id/tvUsername"
			android:layout_margin="5dp"
			android:text="@string/username"
			app:drawableStartCompat="@drawable/ic_profile"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:id="@+id/tvDescription"
			android:text="Some description..."
			android:layout_marginBottom="6dp"/>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="320dp"
			android:id="@+id/ivPostImage"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_loader"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:textStyle="bold"
				android:gravity="center"
				android:layout_weight="1"
				android:id="@+id/tvLikes"
				android:layout_margin="5dp"
				android:text="@string/likes"
				app:drawableStartCompat="@drawable/ic_like" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:textStyle="bold"
				android:gravity="center"
				android:layout_weight="1"
				android:id="@+id/tvSaved"
				android:layout_margin="5dp"
				android:text="@string/saved"
				app:drawableStartCompat="@drawable/ic_save" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:textStyle="bold"
				android:gravity="center"
				android:layout_margin="5dp"
				android:layout_weight="1"
				android:id="@+id/tvShare"
				android:text="@string/share"
				app:drawableStartCompat="@drawable/ic_share" />
		</LinearLayout>
	</LinearLayout>
</androidx.cardview.widget.CardView>

