<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:orientation="vertical"
        tools:context=".ui.upload.AddPostFragment">

        <EditText
            android:id="@+id/editTextPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_post_here"
            android:autofillHints=""
            android:inputType="text" />
    </LinearLayout>

    <ImageView
        android:id="@+id/upload"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_upload"
        android:contentDescription="@string/upload"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/AddPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_post"
        android:focusable="true"
        android:contentDescription="@string/add_post" />

</androidx.constraintlayout.widget.ConstraintLayout>
