<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <!-- Top Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:ignore="InefficientWeight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:src="@drawable/ic_back"
                android:clickable="true"
                android:onClick="Back" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/logout_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Logout_message"
                android:textSize="16sp" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/logout" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
